<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/LocationFragment"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="8dp">

        <!-- Settings Heading -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="16dp"
            android:text="@string/settings"
            android:textSize="24sp" />

        <!-- Lock Screen to Portrait -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=                                                                                                                       "@string/lock_screen_to_portrait"
                    android:textSize="18sp"
                    tools:ignore="HardcodedText" />

                <Switch
                    android:id="@+id/switch_lock_portrait"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Notification Settings -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/push_notifications"
                    android:textSize="18sp" />

                <Switch
                    android:id="@+id/switch_notifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Theme Selection -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/theme"
                    android:textSize="18sp"/>

                <Switch
                    android:id="@+id/switch_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Currency Selection -->
        <androidx.cardview.widget.CardView
            android:id="@+id/currencyCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/currency"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>